--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,28 @@
   "author": "Fabio",
   "private": true,
   "scripts": {
-    "start": "nodemon src/index.js"
+    "build": "sucrase ./src -d ./dist --transforms typescript.imports",
+    "dev": "nodemon src/server.ts",
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongoose": "^5.8.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.35",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "sucrase": "^3.11.0",
+    "typescript": "^3.7.4"
   }
 }
